# ai-coding-usage-monitor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROVIDER_ADAPTERS.md  README.md  TAURI_MIGRATION.md  claude_usage_tray.py  debug_start.bat  debug_start_tauri.bat  install.bat  install_statusline.bat  setup_statusline.py  start.bat  start_tauri.bat  statusline_capture.py
agents/provider-adapter-expert/: SKILL.md
agents/provider-adapter-expert/agents/: openai.yaml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: prepare-sidecar.ps1
desktop/src/: App.tsx  FishTankPanel.tsx  api.ts  styles.css  tray.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: config.rs  forecast.rs  import_legacy.rs  lib.rs  main.rs  models.rs  providers.rs  sanitized_log.rs  storage.rs
desktop/src/fishpx/: demoState.ts  pixelArt.ts  rng.ts  sceneTheme.ts  tank.ts  types.ts
