[package]
name = "simple-ai-usage-monitor"
version = "0.7.0-migration.0"
description = "Local-first AI coding-agent usage monitor"
authors = ["Simple AI Usage Monitor"]
edition = "2021"
default-run = "simple-ai-usage-monitor"

[lib]
name = "simple_ai_usage_monitor_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "simple-ai-usage-monitor"
path = "src/main.rs"

[[bin]]
name = "statusline_capture"
path = "src/bin/statusline_capture.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2"
thiserror = "1"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
